モーダル実装直前

--- a/company.html
+++ b/company.html
@@ -237,25 +237,25 @@
       <div class="flex-right">
         <ul>
           <li class="items">
-            <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
-            <span class="position">現役エンジニア講師</span>
-            <p class="name">TETSU</p>
-            <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
-            <img src="img/underline_deco.png" class="underline" alt="message_deco">
+            <img src="img/member_pic_kato.png" class="pic" alt="member_pic">
+            <span class="position">代表</span>
+            <p class="name">加藤 夕騎</p>
+            <p class="words">お客様一人ひとりの目的や課題にあった組み合わせをカリキュラムとして提供します。</p>
+            <img src="img/top_underline_deco.png" class="underline" alt="message_deco">
           </li>
           <li class="items">
-            <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
-            <span class="position">現役エンジニア講師</span>
-            <p class="name">TETSU</p>
-            <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
-            <img src="img/underline_deco.png" class="underline" alt="message_deco">
+            <img src="img/member_pic_aoki.png" class="pic" alt="member_pic">
+            <span class="position">広報・戦略企画</span>
+            <p class="name">AOKI</p>
+            <p class="words">Instagramでプログラミングの魅力を届け、ProNaviとの出会いをつくっています。</p>
+            <img src="img/top_underline_deco.png" class="underline" alt="message_deco">
           </li>
           <li class="items">
-            <img src="img/member_pic_demo.png" class="pic" alt="member_pic">
-            <span class="position">現役エンジニア講師</span>
-            <p class="name">TETSU</p>
-            <p class="words">継続可能かつ着実にスキルをつけられる学習方法を一緒に探します。</p>
-            <img src="img/underline_deco.png" class="underline" alt="message_deco">
+            <img src="img/member_pic_free2.png" class="pic" alt="member_pic">
+            <span class="position">開発・技術担当</span>
+            <p class="name">YUKI</p>
+            <p class="words">受講生が実務で使える開発環境と教材を整え、学習の土台づくりを担当しています。</p>
+            <img src="img/top_underline_deco.png" class="underline" alt="message_deco">
           </li>
         </ul>
       </div>
@@ -270,20 +270,22 @@
         <ul>
           <li>
             <div class="icon">
-              <img src="img/iruka_pic_demo.png" alt="">
+              <img src="img/iruka_pic.png" alt="">
             </div>
             <div class="text">
               <span>iruka.freelance</span>
               <p class="text">いるか｜ワンランク上の仕事と日常</p>
+              <a href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">アカウントを見る >>></a>
             </div>
           </li>
           <li>
             <div class="icon">
-              <img src="img/iruka_pic_demo.png" alt="">
+              <img src="img/kakashi_pic.png" alt="">
             </div>
             <div class="text">
               <span>kakashi.programming.lab</span>
               <p class="text">かかし｜プログラミング×教育️</p>
+              <a href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">アカウントを見る >>></a>
             </div>
           </li>
         </ul>
@@ -358,7 +360,7 @@
       </a>
       <div class="footer-bottom">
         <ul class="left">
-          <li><img src="img/logo_transparent.png" alt="logo"></li>
+          <li><a href="index.html"><img src="img/logo_transparent.png" alt="logo"></a></li>
           <li><a href="https://navigator-of-engineering.com/" target="_blank">運営会社｜株式会社NOE</a></li>
           <li><a href="https://pronavi.navigator-of-engineering.com/law_info.html#" target="_blank">特定商取引法に基づく表記</a>
           </li>
