--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
           <tr>
             <th></th>
             <th class="pronavi">
-              <p class="school-name">Pronavi</p>
+              <p class="school-name">ProNavi</p>
             </th>
 
             <th>
