--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             </div>
           </a>
 
-          <a href="https://quietkg.shop/">
+          <a href="https://pronavi-board.noe-p.com/quiet/">
             <div class="slider-inner">
               <div class="front">
                 <img src="img/works/2-front.png" alt="works2-front" />
@@ -571,7 +571,7 @@
             </div>
           </a>
 
-          <a href="https://takerunakase.github.io/Trattoria-Verde/">
+          <a href="https://pronavi-board.noe-p.com/trattoria-verde/">
             <div class="slider-inner">
               <div class="front">
                 <img src="img/works/3-front.png" alt="works3-front" />
@@ -582,7 +582,7 @@
             </div>
           </a>
 
-          <a href="https://yuta-swallows.github.io/tokyo-thundards-goods-site/">
+          <a href="https://pronavi-board.noe-p.com/%e6%9d%b1%e4%ba%ac%e3%82%b5%e3%83%b3%e3%83%80%e3%83%bc%e3%82%b9ec%e3%82%b0%e3%83%83%e3%82%ba%e3%82%b5%e3%82%a4%e3%83%88/">
             <div class="slider-inner">
               <div class="front">
                 <img src="img/works/4-front.png" alt="works4-front" />
@@ -593,7 +593,7 @@
             </div>
           </a>
 
-          <a href="https://ryotasogawa.github.io/originalsitte/">
+          <a href="https://pronavi-board.noe-p.com/%e3%82%aa%e3%83%aa%e3%82%b8%e3%83%8a%e3%83%abbarber%e3%82%b5%e3%82%a4%e3%83%88/">
             <div class="slider-inner">
               <div class="front">
                 <img src="img/works/5-front.png" alt="works5-front" />
@@ -604,7 +604,7 @@
             </div>
           </a>
 
-          <a href="https://chimoe166.github.io/-LP/">
+          <a href="https://pronavi-board.noe-p.com/%e3%82%86%e3%81%99%e3%81%af%e3%82%89%e9%9b%b2%e3%81%ae%e4%b8%8a%e3%81%ae%e5%9b%b3%e6%9b%b8%e9%a4%a8lp/">
             <div class="slider-inner">
               <div class="front">
                 <img src="img/works/6-front.png" alt="works6-front" />
