top/companyページのalt追加・companyのaタグボタンcss修正

--- a/company.html
+++ b/company.html
@@ -77,14 +77,14 @@
 <body class="company">
   <header>
     <h1>
-      <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+      <a href="index.html"><img src="img/logo.png" alt="logo" class="logo" /></a>
     </h1>
   
     <div class="menu-bg"></div>
     <nav class="hamburger-menu">
       <div class="company">
         <h2 class="active-logo">
-          <a href="index.html"><img src="img/logo.png" alt="" /></a>
+          <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
         </h2>
         <p class="address">
           〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
@@ -270,7 +270,7 @@
         <ul>
           <li>
             <div class="icon">
-              <img src="img/iruka_pic.png" alt="">
+              <img src="img/iruka_pic.png" alt="iruka_icon">
             </div>
             <div class="text">
               <span>iruka.freelance</span>
@@ -280,7 +280,7 @@
           </li>
           <li>
             <div class="icon">
-              <img src="img/kakashi_pic.png" alt="">
+              <img src="img/kakashi_pic.png" alt="kakashi_icon">
             </div>
             <div class="text">
               <span>kakashi.programming.lab</span>
@@ -301,7 +301,7 @@
         <ul>
           <li>
             <div class="thumnail">
-              <img src="img/media_demo.png" alt="">
+              <img src="img/media_thumnail.png" alt="media_thumnail">
             </div>
             <div class="info">
               <span>2025/02/24</span>
@@ -383,7 +383,7 @@
         </button>
       </a>
       <a href="#" class="chatbot" aria-label="チャットで相談">
-        <img src="img/footer_icon-chatbot.png" alt="" />
+        <img src="img/footer_icon-chatbot.png" alt="chatbot" />
       </a>
   </footer>
 
