--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
   <header>
     <h1>
-      <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
+      <a href="index.html"><img src="img/logo.png" alt="logo" class="logo" /></a>
     </h1>
 
     <div class="menu-bg"></div>
     <nav class="hamburger-menu">
       <div class="company">
         <h2 class="active-logo">
-          <a href="index.html"><img src="img/logo.png" alt="" /></a>
+          <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
         </h2>
         <p class="address">
           〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
@@ -236,7 +236,7 @@
           <ul class="purpose-list">
             <li>
               <a href="#">
-                <img src="img/purpose-1.png" alt="" />
+                <img src="img/purpose-1.png" alt="purpose1" />
                 <h3 class="box-title">
                   他社との比較<span class="en">Comparison</span>
                 </h3>
@@ -245,7 +245,7 @@
             </li>
             <li>
               <a href="about.html">
-                <img src="img/purpose-2.png" alt="" />
+                <img src="img/purpose-2.png" alt="purpose2" />
                 <h3 class="box-title">
                   どんなスクール？<span class="en">School</span>
                 </h3>
@@ -254,7 +254,7 @@
             </li>
             <li>
               <a href="voice.html">
-                <img src="img/purpose-3.png" alt="" />
+                <img src="img/purpose-3.png" alt="purpose3" />
                 <h3 class="box-title">
                   案件獲得できる？<span class="en">Lead</span>
                 </h3>
@@ -263,7 +263,7 @@
             </li>
             <li>
               <a href="#">
-                <img src="img/purpose-4.png" alt="" />
+                <img src="img/purpose-4.png" alt="purpose4" />
                 <h3 class="box-title">
                   未経験でも大丈夫？<span class="en">Unexperienced</span>
                 </h3>
@@ -286,7 +286,7 @@
 
         <ul class="list">
           <li>
-            <img src="img/before-after-1.png" alt="" class="fadein" />
+            <img src="img/before-after-1.png" alt="before-after-1" class="fadein" />
             <p class="middle left">
               <span class="label fadein">before</span>
               <span class="text fadein">独学で挫折</span>
@@ -295,11 +295,11 @@
               <span class="label fadein">after</span>
               <span class="text fadein">5ヶ月で初案件獲得</span>
             </p>
-            <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
+            <div class="arrow"><img src="img/arrow1.png" alt="arrow1" /></div>
             <p class="small">ちえさん｜30歳｜会社員</p>
           </li>
           <li>
-            <img src="img/before-after-2.png" alt="" class="fadein" />
+            <img src="img/before-after-2.png" alt="before-after-2" class="fadein" />
             <p class="middle left">
               <span class="label fadein">before</span>
               <span class="text fadein">スキルに不安</span>
@@ -308,11 +308,11 @@
               <span class="label fadein">after</span>
               <span class="text fadein">自分の制作で喜ばれるように</span>
             </p>
-            <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
+            <div class="arrow"><img src="img/arrow1.png" alt="arrow1" /></div>
             <p class="small">みきさん｜20歳｜専業主婦</p>
           </li>
           <li>
-            <img src="img/before-after-3.png" alt="" class="fadein" />
+            <img src="img/before-after-3.png" alt="before-after-3" class="fadein" />
             <p class="middle left">
               <span class="label fadein">before</span>
               <span class="text fadein">仕事と両立できない</span>
@@ -321,7 +321,7 @@
               <span class="label fadein">after</span>
               <span class="text fadein">毎月安定して収入に</span>
             </p>
-            <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
+            <div class="arrow"><img src="img/arrow1.png" alt="arrow1" /></div>
             <p class="small">太郎さん｜30歳｜会社員</p>
           </li>
         </ul>
@@ -341,7 +341,7 @@
           <ul class="list">
             <li class="item">
               <div class="left">
-                <img src="img/reason-1.png" alt="" />
+                <img src="img/reason-1.png" alt="reason1" />
               </div>
               <div class="right">
                 <h3 class="box-title">コーチング型個別指導</h3>
@@ -353,7 +353,7 @@
 
             <li class="item">
               <div class="left">
-                <img src="img/reason-2.png" alt="" />
+                <img src="img/reason-2.png" alt="reason2" />
               </div>
               <div class="right">
                 <h3 class="box-title">24時間質問対応</h3>
@@ -365,7 +365,7 @@
 
             <li class="item">
               <div class="left">
-                <img src="img/reason-3.png" alt="" />
+                <img src="img/reason-3.png" alt="reason3" />
               </div>
               <div class="right">
                 <h3 class="box-title">案件獲得まで徹底サポート</h3>
@@ -377,7 +377,7 @@
 
             <li class="item">
               <div class="left">
-                <img src="img/reason-4.png" alt="" />
+                <img src="img/reason-4.png" alt="reason4" />
               </div>
               <div class="right">
                 <h3 class="box-title">実践重視のカリキュラム</h3>
@@ -389,7 +389,7 @@
 
             <li class="item">
               <div class="left">
-                <img src="img/reason-5.png" alt="" />
+                <img src="img/reason-5.png" alt="reason5" />
               </div>
               <div class="right">
                 <h3 class="box-title">卒業後も安心のコミュニティ</h3>
@@ -531,7 +531,7 @@
       <div class="teacher-modal-content">
         <button class="teacher-modal-close">&times;</button>
         <div class="teacher-modal-inner">
-          <img src="" alt="" class="teacher-modal-pic" />
+          <img src="" alt="teacher-modal-pic" class="teacher-modal-pic" />
           <div class="teacher-modal-info">
             <span class="teacher-modal-position"></span>
             <h3 class="teacher-modal-name"></h3>
@@ -628,7 +628,7 @@
       </div>
 
       <div class="sp-icon wrapper">
-        <img src="img/top_swipetoright.png" alt="">
+        <img src="img/top_swipetoright.png" alt="swipe_to_right">
         <span>スワイプして比較する</span>
       </div>
 
@@ -735,7 +735,7 @@
               <p class="middle info">8<span>日間</span>無条件返金保証</p>
             </div>
             <div class="icon">
-              <img src="img/top_riskfree.png" alt="" />
+              <img src="img/top_riskfree.png" alt="cooling-off-pic" />
             </div>
           </div>
           <p>
@@ -901,7 +901,7 @@
       </a>
 
       <a href="#" class="chatbot" aria-label="チャットで相談">
-        <img src="img/footer_icon-chatbot.png" alt="" />
+        <img src="img/footer_icon-chatbot.png" alt="chatbot-icon" />
       </a>
     </div>
   </footer>
