リモートmain最新版取り込み直前

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 <body>
 
-  <!-- <div id="loading">
+  <div id="loading">
     <img src="img/logo_movie.gif">
-  </div> -->
+  </div>
 
   <header>
     <h1>
@@ -118,7 +118,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#faq">
             <span class="en">FAQ</span>
             <span class="ja">よくある質問</span>
           </a>
