--- a/company.html
+++ b/company.html
@@ -117,7 +117,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="index.html#faq">
             <span class="en">FAQ</span>
             <span class="ja">よくある質問</span>
           </a>
