最新リモートmain取り込み後、少しだけ修正

--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="about.html#price">
             <span class="en">Price</span>
             <span class="ja">料金</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="index.html#faq">
             <span class="en">FAQ</span>
             <span class="ja">よくある質問</span>
           </a>
