--- a/company.html
+++ b/company.html
@@ -111,7 +111,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="about.html#price">
             <span class="en">Price</span>
             <span class="ja">料金</span>
           </a>
