--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
         <li>
           <a href="about.html">
             <span class="en">About</span>
-            <span class="ja">スクールの紹介</span>
+            <span class="ja">スクール詳細</span>
           </a>
         </li>
         <li>
@@ -105,13 +105,13 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="about.html#price">
             <span class="en">Price</span>
             <span class="ja">料金</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="index.html#faq">
             <span class="en">FAQ</span>
             <span class="ja">よくある質問</span>
           </a>
@@ -150,7 +150,7 @@
         <li>
           <a href="about.html">
             <span class="en">About</span>
-            <span class="ja">スクールの紹介</span>
+            <span class="ja">スクール詳細</span>
           </a>
         </li>
         <li>
@@ -160,13 +160,13 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="about.html#price">
             <span class="en">Price</span>
             <span class="ja">料金</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="index.html#faq">
             <span class="en">FAQ</span>
             <span class="ja">よくある質問</span>
           </a>
@@ -204,7 +204,7 @@
   <main>
     <section id="fv" class="wrapper">
       <span class="section-title__en">SCHOOL</span>
-      <h2 class="section-title flex-left fadein2">スクール概要</h2>
+      <h2 class="section-title flex-left fadein2">スクール詳細</h2>
     </section>
 
     <section id="moya" class="wrapper inner">
@@ -338,7 +338,9 @@
             <li class="text">案件獲得のサポート</li>
           </div>
         </ul>
-        <small>※お申込み後8日以内であれば、手数料無料にて契約を無条件で解除できます。</small>
+        <p class="small">※初回授業を受けてから判断できます。
+          「雰囲気が違う」「自分に合わない」と感じても、クーリングオフ期間中なら退会・返金が可能です。
+          初めての学習でも安心して始めてください。</p>
       </div>
     </section>
 
@@ -346,71 +348,71 @@
       <h3 class="section-title fadein">生徒の制作実績</h3><span class="section-title-deco">works</span>
       <div class="flip-slider__inner js-flip-slider">
         <a
-          href="https://pronavi-board.noe-p.com/%e7%be%8e%e5%ae%b9%e3%82%a8%e3%82%b9%e3%83%86%e3%82%b5%e3%83%ad%e3%83%b3%e3%81%aehp/">
-          <div class="slider-inner">
-            <div class="front">
-              <img src="img/works/1-front.png" alt="works1-front">
-            </div>
-            <div class="back">
-              <img src="img/works/1-back.png" alt="works1-back">
-            </div>
+        href="https://pronavi-board.noe-p.com/%e7%be%8e%e5%ae%b9%e3%82%a8%e3%82%b9%e3%83%86%e3%82%b5%e3%83%ad%e3%83%b3%e3%81%aehp/" target="_blank" >
+        <div class="slider-inner">
+          <div class="front">
+            <img src="img/works/1-front.png" alt="works1-front" />
           </div>
-        </a>
+          <div class="back">
+            <img src="img/works/1-back.png" alt="works1-back" />
+          </div>
+        </div>
+      </a>
 
-        <a href="https://quietkg.shop/">
-          <div class="slider-inner">
-            <div class="front">
-              <img src="img/works/2-front.png" alt="works2-front">
-            </div>
-            <div class="back">
-              <img src="img/works/2-back.png" alt="works2-back">
-            </div>
+      <a href="https://pronavi-board.noe-p.com/quiet/ " target="_blank">
+        <div class="slider-inner">
+          <div class="front">
+            <img src="img/works/2-front.png" alt="works2-front" />
           </div>
-        </a>
+          <div class="back">
+            <img src="img/works/2-back.png" alt="works2-back" />
+          </div>
+        </div>
+      </a>
 
-        <a href="https://takerunakase.github.io/Trattoria-Verde/">
-          <div class="slider-inner">
-            <div class="front">
-              <img src="img/works/3-front.png" alt="works3-front">
-            </div>
-            <div class="back">
-              <img src="img/works/3-back.png" alt="works3-back">
-            </div>
+      <a href="https://pronavi-board.noe-p.com/trattoria-verde/" target="_blank">
+        <div class="slider-inner">
+          <div class="front">
+            <img src="img/works/3-front.png" alt="works3-front" />
           </div>
-        </a>
+          <div class="back">
+            <img src="img/works/3-back.png" alt="works3-back" />
+          </div>
+        </div>
+      </a>
 
-        <a href="https://yuta-swallows.github.io/tokyo-thundards-goods-site/">
-          <div class="slider-inner">
-            <div class="front">
-              <img src="img/works/4-front.png" alt="works4-front">
-            </div>
-            <div class="back">
-              <img src="img/works/4-back.png" alt="works4-back">
-            </div>
+      <a href="https://pronavi-board.noe-p.com/%e6%9d%b1%e4%ba%ac%e3%82%b5%e3%83%b3%e3%83%80%e3%83%bc%e3%82%b9ec%e3%82%b0%e3%83%83%e3%82%ba%e3%82%b5%e3%82%a4%e3%83%88/" target="_blank">
+        <div class="slider-inner">
+          <div class="front">
+            <img src="img/works/4-front.png" alt="works4-front" />
           </div>
-        </a>
+          <div class="back">
+            <img src="img/works/4-back.png" alt="works4-back" />
+          </div>
+        </div>
+      </a>
 
-        <a href="https://ryotasogawa.github.io/originalsitte/">
-          <div class="slider-inner">
-            <div class="front">
-              <img src="img/works/5-front.png" alt="works5-front">
-            </div>
-            <div class="back">
-              <img src="img/works/5-back.png" alt="works5-back">
-            </div>
+      <a href="https://pronavi-board.noe-p.com/%e3%82%aa%e3%83%aa%e3%82%b8%e3%83%8a%e3%83%abbarber%e3%82%b5%e3%82%a4%e3%83%88/" target="_blank">
+        <div class="slider-inner">
+          <div class="front">
+            <img src="img/works/5-front.png" alt="works5-front" />
           </div>
-        </a>
+          <div class="back">
+            <img src="img/works/5-back.png" alt="works5-back" />
+          </div>
+        </div>
+      </a>
 
-        <a href="https://chimoe166.github.io/-LP/">
-          <div class="slider-inner">
-            <div class="front">
-              <img src="img/works/6-front.png" alt="works6-front">
-            </div>
-            <div class="back">
-              <img src="img/works/6-back.png" alt="works6-back">
-            </div>
+      <a href="https://pronavi-board.noe-p.com/%e3%82%86%e3%81%99%e3%81%af%e3%82%89%e9%9b%b2%e3%81%ae%e4%b8%8a%e3%81%ae%e5%9b%b3%e6%9b%b8%e9%a4%a8lp/" target="_blank">
+        <div class="slider-inner">
+          <div class="front">
+            <img src="img/works/6-front.png" alt="works6-front" />
           </div>
-        </a>
+          <div class="back">
+            <img src="img/works/6-back.png" alt="works6-back" />
+          </div>
+        </div>
+      </a>
       </div>
       <div class="viewmore">
         <a href="https://pronavi-board.noe-p.com/">View More ></a>
@@ -422,27 +424,35 @@
     <div class="inner">
       <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="contact">
         <div class="flex">
-          <img src="img/contact.png" alt="contact">
-          <p class="small">まずはLINEで無料カウンセリングから。<br>お気軽にご相談ください。</p>
+          <img src="img/contact.png" alt="contact" />
+          <p class="small">
+            まずはLINEで無料カウンセリングから。<br />お気軽にご相談ください。
+          </p>
         </div>
       </a>
       <div class="footer-bottom">
         <ul class="left">
-          <li><img src="img/logo_transparent.png" alt="logo"></li>
-          <li><a href="https://navigator-of-engineering.com/" target="_blank">運営会社｜株式会社NOE</a></li>
-          <li><a href="https://pronavi.navigator-of-engineering.com/law_info.html#" target="_blank">特定商取引法に基づく表記</a>
+          <li><img src="img/logo_transparent.png" alt="logo" /></li>
+          <li>
+            <a href="https://navigator-of-engineering.com/" target="_blank">運営会社｜株式会社NOE</a>
           </li>
-          <li><a href="https://pronavi.navigator-of-engineering.com/privacy.html" target="_blank">プライバシーポリシー</a></li>
+          <li>
+            <a href="https://pronavi.navigator-of-engineering.com/law_info.html#" target="_blank">特定商取引法に基づく表記</a>
+          </li>
+          <li>
+            <a href="https://pronavi.navigator-of-engineering.com/privacy.html" target="_blank">プライバシーポリシー</a>
+          </li>
         </ul>
         <nav class="right">
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="about.html">スクール概要</a></li>
+            <li><a href="about.html">スクール詳細</a></li>
             <li><a href="voice.html">受講生の声</a></li>
             <li><a href="#">会社概要</a></li>
           </ul>
         </nav>
       </div>
+      <div class="copy"><small>&copy;COPYRIGHT NOE Co.ltd</small></div>
 
       <a href="#" class="page-top">
         <button>
@@ -452,10 +462,10 @@
       </a>
 
       <a href="#" class="chatbot" aria-label="チャットで相談">
-        <img src="img/footer_icon-chatbot.png" alt="" />
+        <img src="img/footer_icon-chatbot.png" alt="chatbot-icon" />
       </a>
+    </div>
   </footer>
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="main.js"></script>
