--- a/company.html
+++ b/company.html
@@ -77,20 +77,20 @@
 <body class="company">
   <header>
     <h1>
-      <a href="index.html"><img src="img/logo.png" alt="logo" class="logo" /></a>
+      <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
     </h1>
-  
+
     <div class="menu-bg"></div>
     <nav class="hamburger-menu">
       <div class="company">
         <h2 class="active-logo">
-          <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="img/logo.png" alt="" /></a>
         </h2>
         <p class="address">
           〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
         </p>
       </div>
-  
+
       <ul class="menu">
         <li>
           <a href="index.html">
@@ -101,7 +101,7 @@
         <li>
           <a href="about.html">
             <span class="en">About</span>
-            <span class="ja">スクールの紹介</span>
+            <span class="ja">スクール詳細</span>
           </a>
         </li>
         <li>
@@ -129,7 +129,7 @@
           </a>
         </li>
       </ul>
-  
+
       <ul class="link">
         <li>
           <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a>
@@ -150,13 +150,13 @@
         <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
       </ul>
     </nav>
-  
+
     <nav class="header-menu">
       <ul class="menu">
         <li>
           <a href="about.html">
             <span class="en">About</span>
-            <span class="ja">スクールの紹介</span>
+            <span class="ja">スクール詳細</span>
           </a>
         </li>
         <li>
@@ -166,13 +166,13 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="about.html#price">
             <span class="en">Price</span>
             <span class="ja">料金</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="index.html#faq">
             <span class="en">FAQ</span>
             <span class="ja">よくある質問</span>
           </a>
@@ -184,12 +184,12 @@
           </a>
         </li>
       </ul>
-  
+
       <!-- 固定 -->
       <div class="fixed">
-  
+
         <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
-  
+
         <div class="hamburger_fixed">
           <div class="hamburger_toggle">
             <span></span>
@@ -197,7 +197,7 @@
             <span></span>
           </div>
         </div>
-  
+
       </div>
       <!--  -->
     </nav>
@@ -354,27 +354,35 @@
     <div class="inner">
       <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="contact">
         <div class="flex">
-          <img src="img/contact.png" alt="contact">
-          <p class="small">まずはLINEで無料カウンセリングから。<br>お気軽にご相談ください。</p>
+          <img src="img/contact.png" alt="contact" />
+          <p class="small">
+            まずはLINEで無料カウンセリングから。<br />お気軽にご相談ください。
+          </p>
         </div>
       </a>
       <div class="footer-bottom">
         <ul class="left">
-          <li><a href="index.html"><img src="img/logo_transparent.png" alt="logo"></a></li>
-          <li><a href="https://navigator-of-engineering.com/" target="_blank">運営会社｜株式会社NOE</a></li>
-          <li><a href="https://pronavi.navigator-of-engineering.com/law_info.html#" target="_blank">特定商取引法に基づく表記</a>
+          <li><img src="img/logo_transparent.png" alt="logo" /></li>
+          <li>
+            <a href="https://navigator-of-engineering.com/" target="_blank">運営会社｜株式会社NOE</a>
           </li>
-          <li><a href="https://pronavi.navigator-of-engineering.com/privacy.html" target="_blank">プライバシーポリシー</a></li>
+          <li>
+            <a href="https://pronavi.navigator-of-engineering.com/law_info.html#" target="_blank">特定商取引法に基づく表記</a>
+          </li>
+          <li>
+            <a href="https://pronavi.navigator-of-engineering.com/privacy.html" target="_blank">プライバシーポリシー</a>
+          </li>
         </ul>
         <nav class="right">
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="about.html">スクール概要</a></li>
+            <li><a href="about.html">スクール詳細</a></li>
             <li><a href="voice.html">受講生の声</a></li>
             <li><a href="#">会社概要</a></li>
           </ul>
         </nav>
       </div>
+      <div class="copy"><small>&copy;COPYRIGHT NOE Co.ltd</small></div>
 
       <a href="#" class="page-top">
         <button>
@@ -382,9 +390,11 @@
           <span class="to-top-text">PAGE TOP</span>
         </button>
       </a>
+
       <a href="#" class="chatbot" aria-label="チャットで相談">
-        <img src="img/footer_icon-chatbot.png" alt="chatbot" />
+        <img src="img/footer_icon-chatbot.png" alt="chatbot-icon" />
       </a>
+    </div>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
