--- a/index.html
+++ b/index.html
@@ -73,19 +73,20 @@
 <body>
 
   <div id="loading">
-    <img src="img/logo_movie.gif">
+    <!-- <img src="img/logoovie.gif"> -->
+     <video src="img/loading.mp4" autoplay muted playsinline></video>
   </div>
 
   <header>
     <h1>
-      <a href="index.html"><img src="img/logo.png" alt="logo" class="logo" /></a>
+      <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
     </h1>
 
     <div class="menu-bg"></div>
     <nav class="hamburger-menu">
       <div class="company">
         <h2 class="active-logo">
-          <a href="index.html"><img src="img/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="img/logo.png" alt="" /></a>
         </h2>
         <p class="address">
           〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
@@ -102,7 +103,7 @@
         <li>
           <a href="about.html">
             <span class="en">About</span>
-            <span class="ja">スクールの紹介</span>
+            <span class="ja">スクール詳細</span>
           </a>
         </li>
         <li>
@@ -112,13 +113,13 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="about.html#price">
             <span class="en">Price</span>
             <span class="ja">料金</span>
           </a>
         </li>
         <li>
-          <a href="#faq">
+          <a href="index.html#faq">
             <span class="en">FAQ</span>
             <span class="ja">よくある質問</span>
           </a>
@@ -157,7 +158,7 @@
         <li>
           <a href="about.html">
             <span class="en">About</span>
-            <span class="ja">スクールの紹介</span>
+            <span class="ja">スクール詳細</span>
           </a>
         </li>
         <li>
@@ -203,7 +204,6 @@
       <!--  -->
     </nav>
   </header>
-
   <div class="video-bg">
     <video src="img/leaf_bg_landscape.mp4" autoplay muted loop playsinline></video>
   </div>
@@ -211,7 +211,7 @@
   <main>
     <div class="fv">
       <video autoplay muted loop playsinline>
-        <source src="img/FVmovie.mp4" type="video/mp4" />
+        <source src="img/Hackathon-FV02.mp4" type="video/mp4" />
       </video>
       <p class="titles">
         <span class="title">じぶんらしく働く、</span><br />
@@ -564,71 +564,71 @@
       <div class="wrapper">
         <div class="flip-slider__inner js-flip-slider">
           <a
-            href="https://pronavi-board.noe-p.com/%e7%be%8e%e5%ae%b9%e3%82%a8%e3%82%b9%e3%83%86%e3%82%b5%e3%83%ad%e3%83%b3%e3%81%aehp/">
-            <div class="slider-inner">
-              <div class="front">
-                <img src="img/works/1-front.png" alt="works1-front" />
-              </div>
-              <div class="back">
-                <img src="img/works/1-back.png" alt="works1-back" />
-              </div>
+          href="https://pronavi-board.noe-p.com/%e7%be%8e%e5%ae%b9%e3%82%a8%e3%82%b9%e3%83%86%e3%82%b5%e3%83%ad%e3%83%b3%e3%81%aehp/" target="_blank" >
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/1-front.png" alt="works1-front" />
             </div>
-          </a>
-
-          <a href="https://pronavi-board.noe-p.com/quiet/">
-            <div class="slider-inner">
-              <div class="front">
-                <img src="img/works/2-front.png" alt="works2-front" />
-              </div>
-              <div class="back">
-                <img src="img/works/2-back.png" alt="works2-back" />
-              </div>
+            <div class="back">
+              <img src="img/works/1-back.png" alt="works1-back" />
             </div>
-          </a>
-
-          <a href="https://pronavi-board.noe-p.com/trattoria-verde/">
-            <div class="slider-inner">
-              <div class="front">
-                <img src="img/works/3-front.png" alt="works3-front" />
-              </div>
-              <div class="back">
-                <img src="img/works/3-back.png" alt="works3-back" />
-              </div>
+          </div>
+        </a>
+  
+        <a href="https://pronavi-board.noe-p.com/quiet/ " target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/2-front.png" alt="works2-front" />
             </div>
-          </a>
-
-          <a href="https://pronavi-board.noe-p.com/%e6%9d%b1%e4%ba%ac%e3%82%b5%e3%83%b3%e3%83%80%e3%83%bc%e3%82%b9ec%e3%82%b0%e3%83%83%e3%82%ba%e3%82%b5%e3%82%a4%e3%83%88/">
-            <div class="slider-inner">
-              <div class="front">
-                <img src="img/works/4-front.png" alt="works4-front" />
-              </div>
-              <div class="back">
-                <img src="img/works/4-back.png" alt="works4-back" />
-              </div>
+            <div class="back">
+              <img src="img/works/2-back.png" alt="works2-back" />
             </div>
-          </a>
-
-          <a href="https://pronavi-board.noe-p.com/%e3%82%aa%e3%83%aa%e3%82%b8%e3%83%8a%e3%83%abbarber%e3%82%b5%e3%82%a4%e3%83%88/">
-            <div class="slider-inner">
-              <div class="front">
-                <img src="img/works/5-front.png" alt="works5-front" />
-              </div>
-              <div class="back">
-                <img src="img/works/5-back.png" alt="works5-back" />
-              </div>
+          </div>
+        </a>
+  
+        <a href="https://pronavi-board.noe-p.com/trattoria-verde/" target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/3-front.png" alt="works3-front" />
             </div>
-          </a>
-
-          <a href="https://pronavi-board.noe-p.com/%e3%82%86%e3%81%99%e3%81%af%e3%82%89%e9%9b%b2%e3%81%ae%e4%b8%8a%e3%81%ae%e5%9b%b3%e6%9b%b8%e9%a4%a8lp/">
-            <div class="slider-inner">
-              <div class="front">
-                <img src="img/works/6-front.png" alt="works6-front" />
-              </div>
-              <div class="back">
-                <img src="img/works/6-back.png" alt="works6-back" />
-              </div>
+            <div class="back">
+              <img src="img/works/3-back.png" alt="works3-back" />
             </div>
-          </a>
+          </div>
+        </a>
+  
+        <a href="https://pronavi-board.noe-p.com/%e6%9d%b1%e4%ba%ac%e3%82%b5%e3%83%b3%e3%83%80%e3%83%bc%e3%82%b9ec%e3%82%b0%e3%83%83%e3%82%ba%e3%82%b5%e3%82%a4%e3%83%88/" target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/4-front.png" alt="works4-front" />
+            </div>
+            <div class="back">
+              <img src="img/works/4-back.png" alt="works4-back" />
+            </div>
+          </div>
+        </a>
+  
+        <a href="https://pronavi-board.noe-p.com/%e3%82%aa%e3%83%aa%e3%82%b8%e3%83%8a%e3%83%abbarber%e3%82%b5%e3%82%a4%e3%83%88/" target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/5-front.png" alt="works5-front" />
+            </div>
+            <div class="back">
+              <img src="img/works/5-back.png" alt="works5-back" />
+            </div>
+          </div>
+        </a>
+  
+        <a href="https://pronavi-board.noe-p.com/%e3%82%86%e3%81%99%e3%81%af%e3%82%89%e9%9b%b2%e3%81%ae%e4%b8%8a%e3%81%ae%e5%9b%b3%e6%9b%b8%e9%a4%a8lp/" target="_blank">
+          <div class="slider-inner">
+            <div class="front">
+              <img src="img/works/6-front.png" alt="works6-front" />
+            </div>
+            <div class="back">
+              <img src="img/works/6-back.png" alt="works6-back" />
+            </div>
+          </div>
+        </a>
         </div>
       </div>
       <div class="wrapper viewmore">
@@ -900,7 +900,7 @@
         <nav class="right">
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="about.html">スクール概要</a></li>
+            <li><a href="about.html">スクール詳細</a></li>
             <li><a href="voice.html">受講生の声</a></li>
             <li><a href="#">会社概要</a></li>
           </ul>
